tests/unused_function_args/unused_function_args.exp
Error ------------------------------------------------------------------------------------------------------ test.js:4:5

Cannot call `foo` because no arguments are expected by function [1].

   test.js:4:5
   4| foo(1, 2); // error
          ^

References:
   test.js:1:1
   1| function foo() {}
      ^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:6:3

Cannot call `foo` because no arguments are expected by function [1].

   test.js:6:3
   6|   1, // error
        ^

References:
   test.js:1:1
   1| function foo() {}
      ^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:9:1

Cannot call `foo` because no arguments are expected by function [1].

   test.js:9:1
   9| foo(...args); // error
      ^^^

References:
   test.js:1:1
   1| function foo() {}
      ^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:11:16

Cannot call `foo.call` because no arguments are expected by function [1].

   test.js:11:16
   11| foo.call(null, 1, 2); // error
                      ^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:12:5

Cannot call `foo.call` because no arguments are expected by function [1].

   test.js:12:5
   12| foo.call(null, ...args); // error
           ^^^^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:13:16

Cannot call `foo.call` because no arguments are expected by function [1].

   test.js:13:16
   13| foo.call(null, 1, 2, ...args); // error
                      ^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:15:18

Cannot call `foo.apply` because no arguments are expected by function [1].

   test.js:15:18
   15| foo.apply(null, [1, 2]); // error
                        ^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:16:5

Cannot call `foo.apply` because no arguments are expected by function [1].

   test.js:16:5
   16| foo.apply(null, args); // error
           ^^^^^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:18:16

Cannot call `foo.bind` because no arguments are expected by function [1].

   test.js:18:16
   18| foo.bind(null, 1, 2); // error
                      ^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:19:5

Cannot call `foo.bind` because no arguments are expected by function [1].

   test.js:19:5
   19| foo.bind(null, ...args); // error
           ^^^^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:20:16

Cannot call `foo.bind` because no arguments are expected by function [1].

   test.js:20:16
   20| foo.bind(null, 1, 2, ...args); // error
                      ^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:22:9

Cannot call `foo` because no arguments are expected by function [1].

   test.js:22:9
   22| new foo(1, 2); // error
               ^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:23:5

Cannot call `foo` because no arguments are expected by function [1].

   test.js:23:5
   23| new foo(...args); // error
           ^^^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:24:9

Cannot call `foo` because no arguments are expected by function [1].

   test.js:24:9
   24| new foo(1, 2, ...args); // error
               ^

References:
   test.js:1:1
    1| function foo() {}
       ^^^^^^^^^^^^^^ [1]



Found 14 errors
